[package]
name = "lk-jwt-service"
version = "0.5.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Service for delegating authentication and delayed leave events for MatrixRTC on LiveKit"

[[bin]]
name = "lk-jwt-service"
path = "src/main.rs"

[[bin]]
name = "healthcheck"
path = "src/bin/healthcheck.rs"

[dependencies]
livekit-api = { version = "0.5", features = ["rustls-tls-native-roots"] }
livekit-protocol = "0.7"
# Must match livekit-protocol's prost version (message traits are re-used
# by the hand-rolled RoomService Twirp client in helper.rs).
prost = "0.12"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

axum = "0.8"
tower = { version = "0.5", features = ["util"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
redis = { version = "0.29", features = ["tokio-comp"] }

chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
data-encoding = "2"
url = "2"
http = "1"
httpdate = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
jsonwebtoken = "9"
temp-env = "0.3"
http-body-util = "0.1"
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
