[package]
name = "lk-jwt-service-integration-tests"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
